small fix scrollbar

--- a/src/sass/components/_PlanetInfoLink.scss
+++ b/src/sass/components/_PlanetInfoLink.scss
@@ -7,7 +7,7 @@
   overflow: auto;
 
   &::-webkit-scrollbar {
-    width: 1rem;
+    width: 0.5rem;
   }
   &::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(48, 47, 47, 0.404);
